# asus-zenbook-numpad-driver-rs

./: Cargo.toml  README.md
src/: main.rs  um433d.rs
src/numpad/: brightness.rs  ctrl.rs  mod.rs
src/touchpad/: button.rs  dim.rs  mod.rs
